test/compile_errors/err_undefined_fn.w
//! expect-check-fail: undefined variable

// Test: calling an undefined function is rejected.

fn main:
    foo()
